--- a/GitHub_iOS/GitHub_iOS/SupportingFiles/Info.plist
+++ b/GitHub_iOS/GitHub_iOS/SupportingFiles/Info.plist
@@ -2,6 +2,21 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>clientSecret</key>
+	<string>8cae60efe87efaaabcfe0cdd0b6e09ff9e6f4c92</string>
+	<key>clientID</key>
+	<string>04a1cbf7313a2f5dd3d1</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>githubcodingtestapp</string>
+			</array>
+		</dict>
+	</array>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
